--- a/module1/s2_api.ipynb
+++ b/module1/s2_api.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CReA-Patrimoine (50.8114597 - 4.3821275)\n",
+      "50 (50.8117216 - 4.3810881)\n"
+     ]
+    }
+   ],
    "source": [
     "address = \"Avenue Franklin Roosevelt 50, 1050 Bruxelles\"\n",
     "\n",
@@ -68,9 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Languages: German, French, Dutch\n",
+      "Borders: France, Germany, Luxembourg, Netherlands\n"
+     ]
+    }
+   ],
    "source": [
     "country_name = \"Belgium\"\n",
     "\n",
@@ -127,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
