Changements du cours 4

--- a/module3/s3_ner.ipynb
+++ b/module3/s3_ner.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Apple cherche à acheter une start-up anglaise pour 1 milliard de dollars',\n",
+       " \"Les voitures autonomes déplacent la responsabilité de l'assurance vers les constructeurs\",\n",
+       " \"San Francisco envisage d'interdire les robots coursiers sur les trottoirs\",\n",
+       " 'Londres est une grande ville du Royaume-Uni',\n",
+       " 'L’Italie choisit ArcelorMittal pour reprendre la plus grande aciérie d’Europe',\n",
+       " \"Apple lance HomePod parce qu'il se sent menacé par l'Echo d'Amazon\",\n",
+       " \"La France ne devrait pas manquer d'électricité cet été, même en cas de canicule\",\n",
+       " 'Nouvelles attaques de Trump contre le maire de Londres',\n",
+       " 'Où es-tu ?',\n",
+       " 'Qui est le président de la France ?',\n",
+       " 'Où est la capitale des États-Unis ?',\n",
+       " 'Quand est né Barack Obama ?']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Imprimer le corpus de Spacy\n",
     "sentences"
@@ -61,9 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Apple cherche à acheter une start-up anglaise pour 1 milliard de dollars'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Isoler la première phrase\n",
     "sent = sentences[0]\n",
@@ -72,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,36 +115,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Apple cherche à acheter une start-up anglaise pour 1 milliard de dollars'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': 'Apple cherche à acheter une start-up anglaise pour 1 milliard de dollars',\n",
+       " 'ents': [{'start': 0, 'end': 5, 'label': 'ORG'}],\n",
+       " 'sents': [{'start': 0, 'end': 72}],\n",
+       " 'tokens': [{'id': 0,\n",
+       "   'start': 0,\n",
+       "   'end': 5,\n",
+       "   'tag': 'PROPN',\n",
+       "   'pos': 'PROPN',\n",
+       "   'morph': 'Gender=Masc|Number=Sing',\n",
+       "   'lemma': 'Apple',\n",
+       "   'dep': 'nsubj',\n",
+       "   'head': 1},\n",
+       "  {'id': 1,\n",
+       "   'start': 6,\n",
+       "   'end': 13,\n",
+       "   'tag': 'VERB',\n",
+       "   'pos': 'VERB',\n",
+       "   'morph': 'Mood=Ind|Number=Sing|Person=3|Tense=Pres|VerbForm=Fin',\n",
+       "   'lemma': 'cherche',\n",
+       "   'dep': 'ROOT',\n",
+       "   'head': 1},\n",
+       "  {'id': 2,\n",
+       "   'start': 14,\n",
+       "   'end': 15,\n",
+       "   'tag': 'ADP',\n",
+       "   'pos': 'ADP',\n",
+       "   'morph': '',\n",
+       "   'lemma': 'à',\n",
+       "   'dep': 'mark',\n",
+       "   'head': 3},\n",
+       "  {'id': 3,\n",
+       "   'start': 16,\n",
+       "   'end': 23,\n",
+       "   'tag': 'VERB',\n",
+       "   'pos': 'VERB',\n",
+       "   'morph': 'VerbForm=Inf',\n",
+       "   'lemma': 'acheter',\n",
+       "   'dep': 'xcomp',\n",
+       "   'head': 1},\n",
+       "  {'id': 4,\n",
+       "   'start': 24,\n",
+       "   'end': 27,\n",
+       "   'tag': 'DET',\n",
+       "   'pos': 'DET',\n",
+       "   'morph': 'Definite=Ind|Gender=Fem|Number=Sing|PronType=Art',\n",
+       "   'lemma': 'un',\n",
+       "   'dep': 'det',\n",
+       "   'head': 5},\n",
+       "  {'id': 5,\n",
+       "   'start': 28,\n",
+       "   'end': 33,\n",
+       "   'tag': 'NOUN',\n",
+       "   'pos': 'NOUN',\n",
+       "   'morph': 'Gender=Fem|Number=Sing',\n",
+       "   'lemma': 'start',\n",
+       "   'dep': 'obj',\n",
+       "   'head': 3},\n",
+       "  {'id': 6,\n",
+       "   'start': 33,\n",
+       "   'end': 34,\n",
+       "   'tag': 'PROPN',\n",
+       "   'pos': 'PROPN',\n",
+       "   'morph': '',\n",
+       "   'lemma': '-',\n",
+       "   'dep': 'obl:arg',\n",
+       "   'head': 3},\n",
+       "  {'id': 7,\n",
+       "   'start': 34,\n",
+       "   'end': 36,\n",
+       "   'tag': 'X',\n",
+       "   'pos': 'X',\n",
+       "   'morph': '',\n",
+       "   'lemma': 'up',\n",
+       "   'dep': 'obl:arg',\n",
+       "   'head': 3},\n",
+       "  {'id': 8,\n",
+       "   'start': 37,\n",
+       "   'end': 45,\n",
+       "   'tag': 'ADJ',\n",
+       "   'pos': 'ADJ',\n",
+       "   'morph': 'Gender=Fem|Number=Sing',\n",
+       "   'lemma': 'anglais',\n",
+       "   'dep': 'obj',\n",
+       "   'head': 3},\n",
+       "  {'id': 9,\n",
+       "   'start': 46,\n",
+       "   'end': 50,\n",
+       "   'tag': 'ADP',\n",
+       "   'pos': 'ADP',\n",
+       "   'morph': '',\n",
+       "   'lemma': 'pour',\n",
+       "   'dep': 'case',\n",
+       "   'head': 11},\n",
+       "  {'id': 10,\n",
+       "   'start': 51,\n",
+       "   'end': 52,\n",
+       "   'tag': 'NUM',\n",
+       "   'pos': 'NUM',\n",
+       "   'morph': 'NumType=Card',\n",
+       "   'lemma': '1',\n",
+       "   'dep': 'nummod',\n",
+       "   'head': 11},\n",
+       "  {'id': 11,\n",
+       "   'start': 53,\n",
+       "   'end': 61,\n",
+       "   'tag': 'NOUN',\n",
+       "   'pos': 'NOUN',\n",
+       "   'morph': 'Gender=Masc|NumType=Card|Number=Sing',\n",
+       "   'lemma': 'milliard',\n",
+       "   'dep': 'obl:mod',\n",
+       "   'head': 3},\n",
+       "  {'id': 12,\n",
+       "   'start': 62,\n",
+       "   'end': 64,\n",
+       "   'tag': 'ADP',\n",
+       "   'pos': 'ADP',\n",
+       "   'morph': '',\n",
+       "   'lemma': 'de',\n",
+       "   'dep': 'case',\n",
+       "   'head': 13},\n",
+       "  {'id': 13,\n",
+       "   'start': 65,\n",
+       "   'end': 72,\n",
+       "   'tag': 'NOUN',\n",
+       "   'pos': 'NOUN',\n",
+       "   'morph': 'Gender=Masc|Number=Plur',\n",
+       "   'lemma': 'dollar',\n",
+       "   'dep': 'nmod',\n",
+       "   'head': 11}]}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc.to_json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Apple cherche à acheter une start-up anglaise pour 1 milliard de dollars' contient les entités suivantes : Apple (ORG)\n",
+      "'Les voitures autonomes déplacent la responsabilité de l'assurance vers les constructeurs' ne contient aucune entité\n",
+      "'San Francisco envisage d'interdire les robots coursiers sur les trottoirs' contient les entités suivantes : San Francisco (LOC)\n",
+      "'Londres est une grande ville du Royaume-Uni' contient les entités suivantes : Londres (LOC), Royaume-Uni (LOC)\n",
+      "'L’Italie choisit ArcelorMittal pour reprendre la plus grande aciérie d’Europe' contient les entités suivantes : L’Italie (LOC), ArcelorMittal (ORG), Europe (LOC)\n",
+      "'Apple lance HomePod parce qu'il se sent menacé par l'Echo d'Amazon' contient les entités suivantes : Apple (ORG), HomePod (MISC), Echo (ORG), Amazon (ORG)\n",
+      "'La France ne devrait pas manquer d'électricité cet été, même en cas de canicule' contient les entités suivantes : La France (LOC)\n",
+      "'Nouvelles attaques de Trump contre le maire de Londres' contient les entités suivantes : Nouvelles attaques de (MISC), Trump (PER), Londres (LOC)\n",
+      "'Où es-tu ?' ne contient aucune entité\n",
+      "'Qui est le président de la France ?' contient les entités suivantes : la France (LOC)\n",
+      "'Où est la capitale des États-Unis ?' contient les entités suivantes : États-Unis (LOC)\n",
+      "'Quand est né Barack Obama ?' contient les entités suivantes : Barack Obama (PER)\n"
+     ]
+    }
+   ],
    "source": [
     "# Appliquer le test sur toutes les phrases\n",
     "for sent in sentences:\n",
@@ -134,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 3.77 s\n",
+      "Wall time: 6.01 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Traiter le texte\n",
@@ -157,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +392,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verhaegen apparait 7 fois dans le corpus\n",
+      "Arcy apparait 4 fois dans le corpus\n",
+      "Bonne apparait 3 fois dans le corpus\n",
+      "M. Gouin apparait 3 fois dans le corpus\n",
+      "Journa apparait 2 fois dans le corpus\n",
+      "Saint- apparait 2 fois dans le corpus\n",
+      "Jambon apparait 2 fois dans le corpus\n",
+      "franco apparait 2 fois dans le corpus\n",
+      "Salle apparait 2 fois dans le corpus\n",
+      "Saint-Trond apparait 2 fois dans le corpus\n",
+      "Louée apparait 2 fois dans le corpus\n",
+      "cath apparait 2 fois dans le corpus\n",
+      "Bermont apparait 2 fois dans le corpus\n",
+      "M. Humann apparait 2 fois dans le corpus\n",
+      "Villèle apparait 2 fois dans le corpus\n",
+      "Messieurs apparait 2 fois dans le corpus\n",
+      "naedireettoart apparait 1 fois dans le corpus\n",
+      "intoffigaoaa apparait 1 fois dans le corpus\n",
+      "afcrncr apparait 1 fois dans le corpus\n",
+      "i Ponl- apparait 1 fois dans le corpus\n",
+      "Durif apparait 1 fois dans le corpus\n",
+      "Volksrecht apparait 1 fois dans le corpus\n",
+      "Iciuttoa apparait 1 fois dans le corpus\n",
+      "I K. Lanwtreyi apparait 1 fois dans le corpus\n",
+      "r-nta apparait 1 fois dans le corpus\n",
+      "l<- Cou'-t apparait 1 fois dans le corpus\n",
+      "M.t ar.tlll«m apparait 1 fois dans le corpus\n",
+      "Voortui apparait 1 fois dans le corpus\n",
+      "Mmanebe apparait 1 fois dans le corpus\n",
+      "Jehaako apparait 1 fois dans le corpus\n",
+      "Concerts  varlèa  I apparait 1 fois dans le corpus\n",
+      "Lenka apparait 1 fois dans le corpus\n",
+      "Jota dai apparait 1 fois dans le corpus\n",
+      "grandee apparait 1 fois dans le corpus\n",
+      "i jrjnt apparait 1 fois dans le corpus\n",
+      "S. Ralleeterô apparait 1 fois dans le corpus\n",
+      "bone  elevens apparait 1 fois dans le corpus\n",
+      "européea apparait 1 fois dans le corpus\n",
+      "Four apparait 1 fois dans le corpus\n",
+      "Rachel  \n",
+      "Mer apparait 1 fois dans le corpus\n",
+      "Jeanne  Mahieu apparait 1 fois dans le corpus\n",
+      "Mita de St-Saéna apparait 1 fois dans le corpus\n",
+      "Ixeües apparait 1 fois dans le corpus\n",
+      "Gbys apparait 1 fois dans le corpus\n",
+      "Deblon apparait 1 fois dans le corpus\n",
+      "ingénienr apparait 1 fois dans le corpus\n",
+      "Borne apparait 1 fois dans le corpus\n",
+      "Avrttz apparait 1 fois dans le corpus\n",
+      "Mûlibran apparait 1 fois dans le corpus\n",
+      "JosM-ton-Noode apparait 1 fois dans le corpus\n"
+     ]
+    }
+   ],
    "source": [
     "# Trier et imprimer\n",
     "\n",
@@ -191,10 +471,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'loc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\module3\\s3_ner.ipynb Cell 21\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/module3/s3_ner.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m ent \u001b[39min\u001b[39;00m doc\u001b[39m.\u001b[39ments:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/module3/s3_ner.ipynb#X25sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m ent\u001b[39m.\u001b[39mlabel_ \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mLOC\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(ent\u001b[39m.\u001b[39mtext) \u001b[39m>\u001b[39m \u001b[39m3\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/module3/s3_ner.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         loc[ent\u001b[39m.\u001b[39mtext] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'loc' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Compter les entités\n",
+    "people = defaultdict(int)\n",
+    "for ent in doc.ents:\n",
+    "    if ent.label_ == \"LOC\" and len(ent.text) > 3:\n",
+    "        loc[ent.text] += 1"
+   ]
   }
  ],
  "metadata": {
@@ -213,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
