Fonction de sélection des fichiers d'une année

--- a/tps/tp2/s1_keywords.ipynb
+++ b/tps/tp2/s1_keywords.ipynb
@@ -72,6 +72,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fonction de sélection des fichiers d'une année spécifique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def selectionner_fichiers_par_annee(repertoire, annee_cible):\n",
+    "    \"\"\"\n",
+    "    Sélectionne tous les fichiers .txt d'une année spécifique basée sur leur nom.\n",
+    "    \n",
+    "    :param repertoire: Chemin du dossier contenant les fichiers.\n",
+    "    :param annee_cible: Année cible sous forme de chaîne ('1906').\n",
+    "    :return: Liste des fichiers correspondant à l'année.\n",
+    "    \"\"\"\n",
+    "    fichiers_selectionnes = []\n",
+    "\n",
+    "    # Parcourir tous les fichiers dans le répertoire\n",
+    "    for fichier in os.listdir(repertoire):\n",
+    "        # Vérifier si c'est un fichier texte\n",
+    "        if fichier.endswith(\".txt\"):\n",
+    "            try:\n",
+    "                # Découper le nom du fichier\n",
+    "                fichier_split = fichier.split('_')  # ['KB', 'JB838', '1887-12-22', '01-00001']\n",
+    "                date = fichier_split[2]            # \"1887-12-22\"\n",
+    "                annee = date.split('-')[0]         # \"1887\"\n",
+    "\n",
+    "                # Vérifier si l'année correspond à l'année cible\n",
+    "                if annee == annee_cible:\n",
+    "                    fichiers_selectionnes.append(os.path.join(repertoire, fichier))  # Chemin complet\n",
+    "            except IndexError:\n",
+    "                # Ignorer les fichiers mal formatés\n",
+    "                pass\n",
+    "\n",
+    "    return fichiers_selectionnes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
