Appel de la fonction avec arguments définis

--- a/tps/tp2/s1_keywords.ipynb
+++ b/tps/tp2/s1_keywords.ipynb
@@ -115,6 +115,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Appel de la fonction de sélection pour l'année cible (1906)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spécifier l'année et le répertoire\n",
+    "repertoire = data_path\n",
+    "annee_cible = \"1906\"\n",
+    "\n",
+    "# Appeler la fonction\n",
+    "fichiers_selectionnes = selectionner_fichiers_par_annee(repertoire, annee_cible)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
