Compter et afficher le nombre de fichiers 1906

--- a/tps/tp2/s1_keywords.ipynb
+++ b/tps/tp2/s1_keywords.ipynb
@@ -136,6 +136,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compter et afficher le nombre de fichiers sélectionnés pour l'année cible (1906)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compter le nombre de fichiers sélectionnés\n",
+    "nombre_fichiers = len(fichiers_selectionnes)\n",
+    "\n",
+    "# Afficher le nombre de fichiers sélectionnés\n",
+    "print(f\"Nombre de fichiers sélectionnés pour l'année {annee_cible} : {nombre_fichiers}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
