Récupérer le texte de 1906 dans un fichier

--- a/tps/tp2/s1_keywords.ipynb
+++ b/tps/tp2/s1_keywords.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,15 +144,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de fichiers sélectionnés pour l'année 1906 : 100\n"
+     ]
+    }
+   ],
    "source": [
     "# Compter le nombre de fichiers sélectionnés\n",
     "nombre_fichiers = len(fichiers_selectionnes)\n",
     "\n",
     "# Afficher le nombre de fichiers sélectionnés\n",
     "print(f\"Nombre de fichiers sélectionnés pour l'année {annee_cible} : {nombre_fichiers}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Récupérer le texte des fichiers de l'année cible dans une seul fichier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variable pour stocker tout le texte sous forme de chaîne pour l'année cible\n",
+    "all_text_annee_cible = \"\"\n",
+    "\n",
+    "# Parcourir chaque fichier sélectionné et extraire son texte\n",
+    "for fichier in fichiers_selectionnes:\n",
+    "    try:\n",
+    "        # Ouvrir le fichier et lire son contenu\n",
+    "        with open(fichier, 'r', encoding='utf-8') as f:\n",
+    "            text = f.read()  # Lire tout le contenu du fichier\n",
+    "            \n",
+    "            # Concaténer le texte du fichier à la variable all_text_annee_cible\n",
+    "            all_text_annee_cible += text + \"\\n\"  # Ajouter une nouvelle ligne entre les fichiers\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erreur lors de l'ouverture du fichier {fichier}: {e}\")\n",
+    "\n",
+    "# Sauvegarder tout le texte dans un fichier 'all-text_année_cible.txt'\n",
+    "output_filename = f\"all-text_{annee_cible}.txt\"\n",
+    "with open(output_filename, 'w', encoding='utf-8') as output_file:\n",
+    "    output_file.write(all_text_annee_cible)\n",
+    "\n",
+    "print(f\"Le texte pour l'année {annee_cible} a été sauvegardé dans le fichier '{output_filename}'.\")"
    ]
   },
   {
