Suppression code du modèle devenu inutile

--- a/tps/tp2/s1_keywords.ipynb
+++ b/tps/tp2/s1_keywords.ipynb
@@ -172,9 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le texte pour l'année 1906 a été sauvegardé dans le fichier '../../data/txt/all-text_1906.txt'.\n"
+     ]
+    }
+   ],
    "source": [
     "# Variable pour stocker tout le texte sous forme de chaîne pour l'année cible\n",
     "all_text_annee_cible = \"\"\n",
@@ -191,34 +199,12 @@
     "    except Exception as e:\n",
     "        print(f\"Erreur lors de l'ouverture du fichier {fichier}: {e}\")\n",
     "\n",
-    "# Sauvegarder tout le texte dans un fichier 'all-text_année_cible.txt'\n",
-    "output_filename = f\"all-text_{annee_cible}.txt\"\n",
+    "# Sauvegarder tout le texte dans un fichier 'all-text_année_cible.txt' dans data_path\n",
+    "output_filename = os.path.join(data_path, f\"all-text_{annee_cible}.txt\")\n",
     "with open(output_filename, 'w', encoding='utf-8') as output_file:\n",
     "    output_file.write(all_text_annee_cible)\n",
     "\n",
     "print(f\"Le texte pour l'année {annee_cible} a été sauvegardé dans le fichier '{output_filename}'.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ræge quotidien J00 EXEMPLAIRES distribués gratuitement ■ k . ‘ dans ilàgg;lomération bruxelloise et.en province. ï personnes habitant aux étages fenile journal contre 60 c“« par mois. fSpir est expédié en proyinôe contre t*»\"par mois, payables par trimestre. annonces, faits divers et réclames sjont reçu frie d’Isabelle ; à l’AGENCE ROSSFJl. 44. -v , et do l’Enseignement, à BraxelL annonces remises avant midi sont ; -a ;\\'% >1 v»^.:Vv* *\\'• hv/f ■- v 1 v ; \\' y > fif \\'ji l\\'H-et. Jeudi 22 Décembre i8'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Récupérer le texte du fichier\n",
-    "text = open(os.path.join(data_path, this_file), 'r', encoding='utf-8').read()\n",
-    "text[:500]"
    ]
   },
   {
